Add default service names
Problem: Productpage and Reviews services defaulted to talking to other services
in their own namespace instead of default namespace.

Solution: Updated the logic so that when service talk to other micro-services
they default with search domain "default.svc.cluster.local" instead of falling
back to "<deployed-namespace.svc.cluster.local".

Name of these services can also be provided via Dockerfile as arguments or
environment variables.

--- a/src/reviews/reviews-wlpcfg/Dockerfile
+++ b/src/reviews/reviews-wlpcfg/Dockerfile
@@ -26,5 +26,6 @@ ARG star_color
 ENV SERVICE_VERSION ${service_version:-v1}
 ENV ENABLE_RATINGS ${enable_ratings:-false}
 ENV STAR_COLOR ${star_color:-black}
+ENV RATINGS_SERVICE "http://ratings.default.svc.cluster.local:9080/ratings"
 
 CMD /opt/ibm/wlp/bin/server run defaultServer
